# Mandelbrot-set

./: App.cpp  App.h  CMakeLists.txt  Complex.cpp  Complex.h  README.md  main.cpp
